Loader config completed

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,6 @@
 <router-outlet></router-outlet>
+<div style="position: relative">
+  <!-- the position of the parent container must be set to relative -->
+  <!-- It is really important to set loaderId for non-master loader -->
+  <ngx-ui-loader [pbColor]="'#e98752'" [fgsColor]="'#e98752'"></ngx-ui-loader>
+</div>
