--- a/frontend/src/app/shared/component/modal/register-form/register-form.component.html
+++ b/frontend/src/app/shared/component/modal/register-form/register-form.component.html
@@ -2,7 +2,7 @@
   <div
   class="modal-header">
     <h5
-    class="modal-title" id="registerModalLabel">Recruiter Registration</h5>
+    class="modal-title" id="registerModalLabel">{{sharedService.getCurrentRoleFromUrl()?.roleId == 1 ? 'Recruiter' : 'Jobseeker'}} Registration</h5>
     <button (click)="onClickCloseBtn(false)" type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">×</span>
     </button>
